iphone fix
radio too close to bottom

--- a/style.css
+++ b/style.css
@@ -32,8 +32,8 @@ html, body {touch-action: pan-y;}
 
 .radio {
   position: absolute;
-  bottom: 15px;
-  left: 25px;
+  bottom: 35px;
+  left: 35px;
 }
 
 .bottomtext {
@@ -43,7 +43,7 @@ html, body {touch-action: pan-y;}
   text-align: center;
   position: absolute;
   left: 350px;
-  bottom: -20px;
+  bottom: 0;
 }
 
 
